<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.inra.cepia</groupId>
	<artifactId>Imago</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>Imago.jar</name>
	<description>Interactive image processing and analysis</description>
	
    <properties>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
    </properties>

	<dependencies>
		<!-- Jama (Java Matrix package) is used for computing inertia ellipsoid --> 
		<dependency>
			<groupId>gov.nist.math</groupId>
			<artifactId>jama</artifactId>
			<version>1.0.3</version>
		</dependency>
		
		<!-- Add a dependency to JUnit for unit tests --> 
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
	    </dependency>
	
		<!-- GSON for management of JSON files -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
	        
	</dependencies>
    
    
	<build>
		
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<directory>${project.build.sourceDirectory}</directory>
			</resource>
		</resources>
		
		<testResources>
			<testResource>
				<directory>${basedir}/src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>${project.build.testSourceDirectory}</directory>
			</testResource>
		</testResources>
		
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<!-- Configure the jar output directory such that plugin can be seen
				 when ImageJ is run directly from eclipse workspace -->
   			<plugin>
      			<groupId>org.apache.maven.plugins</groupId>
      			<artifactId>maven-jar-plugin</artifactId>
      			<configuration>
        			<outputDirectory>${basedir}/plugins</outputDirectory>
      			</configuration>
    		</plugin>
    		
			<!-- plugin for generating the javadoc.
				 Output is located in "ijpb-plugins/target/site/apidocs" -->
    		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-javadoc-plugin</artifactId>
        		<configuration>
        			<outputDirectory>${project.build.directory}/apidocs</outputDirectory>
        			<encoding>ISO-8859-1</encoding>
      			</configuration>
      			<executions>
          			<execution>
            			<goals>
              				<goal>javadoc</goal>
            			</goals>
            			<phase>site</phase>
          			</execution>
        		</executions>
      		</plugin>
      		
		</plugins>
	</build>

	<developers>
	
		<developer>
			<id>dlegland</id>
			<name>David Legland</name>
			<email>david.legland@grignon.inra.fr</email>
			<organization>INRA</organization>
			<organizationUrl>http://www-ijpb.versailles.inra.fr/en/bc/equipes/modelisation-imagerie/</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>

	</developers>
	
</project>
